--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
 gremlinpython==3.3.0
 PyYAML>=3.12
+
+#required foir kobalos
+six==1.10.0
+aenum==1.4.5
+aiohttp==2.3.10
+inflection==0.3.1
+
+#for kobalos testing
+pytest-asyncio>=0.8.0
+pytest-cache>=1.0
+pytest-cov>=2.5.1
+pytest-pep8>=1.0.6
+pytest>=3.2.1
+
