--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ var/
 .installed.cfg
 *.egg
 .eggs/
+builds/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
