--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
 gremlinpython==3.4.3
-PyYAML>=3.12
-
-#required foir kobalos
-six==1.10.0
-aenum==1.4.5
-aiohttp==2.3.10
+PyYAML==5.3
+six==1.14.0
+aenum==2.2.3
+aiohttp==3.6.2
 inflection==0.3.1
 
-#for kobalos testing
-pytest-asyncio>=0.8.0
+#for testing
+pytest-asyncio>=0.10.0
 pytest-cache>=1.0
-pytest-cov>=2.5.1
+pytest-cov>=2.8.1
 pytest-pep8>=1.0.6
-pytest>=3.2.1
+pytest>=5.3.4
 pytest-timeout>=1.3.4
