--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test:
   image: goblinogm/goblin-buildchain
   script:
   - pip install -U -r requirements.txt
-  - python setup.py test
+  - coverage run --source=aiogremlin/ setup.py test
 
 pages:
   script:
