--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,12 @@ test:
       alias: gremlin-server
   image: goblinogm/goblin-buildchain
   script:
+  - pip install -U codecov
   - pip install -U -r requirements.txt
   - coverage run --source=aiogremlin/ setup.py test
   - python -m unittest discover
   - coverage report -m
+  - codecov
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
 pages:
   script:
