CI: Added codacy codecoverage reporting to the CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,14 @@ test:
       alias: gremlin-server
   image: goblinogm/goblin-buildchain
   script:
-  - pip install -U codecov
+  - pip install -U codecov codacy-coverage
   - pip install -U -r requirements.txt
   - coverage run --source=aiogremlin/ setup.py test
   - python -m unittest discover
   - coverage report -m
+  - coverage xml
   - codecov
+  - python-codacy-coverage -r coverage.xml
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
 pages:
   script:
